--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Yanqi Ge</name>
               </p>
               <p>
-                Yanqi Ge is currently a master student at the University of Electronic Science and Technology of China (UESTC) under the supervision of Prof. <a href="https://lxduan.info" target="_blue"> Lixin Duan </a> and Prof. <a href="https://wenli-vision.github.io" target="_blue"> Wen Li </a>. His research interest includes Computer Vision, Transfer Learning. Specifically, his goal is to build robust vision models for the real world. 
+                Yanqi Ge is currently a postgraduate student at the University of Electronic Science and Technology of China (UESTC) under the supervision of Prof. <a href="https://lxduan.info" target="_blue"> Lixin Duan </a> and Prof. <a href="https://wenli-vision.github.io" target="_blue"> Wen Li </a>. His research interest includes Computer Vision, Transfer Learning. Specifically, his goal is to build robust vision models for the real world. 
 					<li>Office: Room 809, Shenzhen Institute for Advanced Study, UESTC. </li>
 
               </p>
